# pytorch_study

./: pyproject.toml
pytorch_study/: grad.py  tensor.py
