[tool.poetry]
name = "pytorch-study"
version = "0.1.0"
description = ""
authors = ["Tadashi Takahashi <ttakahashi@umn.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
numpy = "^1.26.4"
torch = "^2.3.0"
matplotlib = "^3.8.4"
torchviz = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
